# SlidingPuzzleSolver

./: .gitignore  CMakeLists.txt  README.md  example_run.sh  experiments.bash  input4.txt  input_size7.txt  input_size8.txt  lab1p1vs.sln  main.cpp  output1.txt  output2.txt  output3.txt  solution.h  status.h
lab1p1vs/: input0.txt  input1.txt  lab1p1vs.cpp  lab1p1vs.vcxproj  lab1p1vs.vcxproj.filters  solutionIDAstar.h  status.h
lab1p1vs/Debug/: vc142.idb
lab1p1vs/Debug/lab1p1vs.tlog/: lab1p1vs.lastbuildstate
lab1p1vs/x64/Debug/: vc142.idb
lab1p1vs/x64/Debug/lab1p1vs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1p1vs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1p1vs/x64/Release/lab1p1vs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab1p1vs.lastbuildstate  lab1p1vs.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
res/: genInput.py  input_size4.txt  input_size6.txt
src/: argument.cpp  argument.h  main.cpp  solution.h  solutionIDAstar.h  status.h
